istio-resilience-fake-service/resources/istio/disable-auto-retries.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: preference
spec:
  hosts:
  - preference
  http:
  - route:
    - destination:
        host: preference
    retries:
      attempts: 1   
      retryOn: retriable-4xx   
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - "resilience.customer.io"
  gateways:
  - resilience-gateway
  http:
  - route:
    - destination:
        host: customer
    retries:
      attempts: 1
      retryOn: retriable-4xx
