istio-resilience-fake-service/resources/istio/ph-v1-v2-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: purchase-history-vs
spec:
  hosts:
  - purchase-history
  http:
  - route:
    - destination:
        host: purchase-history
        subset: version-v1
      weight: 50
    - destination:
        host: purchase-history
        subset: version-v2
      weight: 50
